--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "clean": "git clean -f -X -- lib",
     "build": "tsc --project",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
