--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/*.js": true,
-    "**/*.js.map": true,
+    "**/*.map": true,
     "**/*.d.ts": true
   }
 }
