--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true
   }
 }
