--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^9.4.5",
-    "typescript": "^2.7.1"
+    "typescript": "^3.0.3"
   },
   "scripts": {
     "clean": "git clean -f -X -- lib",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "npm run build",
-    "docs": "typedoc --out docs ."
+    "pretest": "npm run build",
+    "test": "node test",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
