--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xerpath",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.1",
   "description": "Extensible path specification for router providers using tagged template literals.",
   "main": "index.js",
   "directories": {
